# gen/http/openapi.yaml
@@ -31,6 +31,12 @@ paths:
       produces:
       - application/json
       parameters:
+      - name: Authorization
+        in: header
+        description: Auth token
+        required: true
+        type: string
+        pattern: ^Basic [^ ]+$
       - name: AccountBalanceRequestBody
         in: body
         required: true
@@ -62,6 +68,8 @@ paths:
             $ref: '#/definitions/ConnectAccountBalanceTimeoutResponseBody'
       schemes:
       - http
+      security:
+      - oauth2_header_Authorization: []
   /Enquiry/AccountTransactions/1.0.0:
     post:
       tags:
@@ -72,6 +80,12 @@ paths:
       produces:
       - application/json
       parameters:
+      - name: Authorization
+        in: header
+        description: Auth token
+        required: true
+        type: string
+        pattern: ^Basic [^ ]+$
       - name: AccountTransactionsRequestBody
         in: body
         required: true
@@ -104,6 +118,8 @@ paths:
             $ref: '#/definitions/ConnectAccountTransactionsTimeoutResponseBody'
       schemes:
       - http
+      security:
+      - oauth2_header_Authorization: []
   /Enquiry/ExchangeRate/1.0.0:
     post:
       tags:
@@ -114,6 +130,12 @@ paths:
       produces:
       - application/json
       parameters:
+      - name: Authorization
+        in: header
+        description: Auth token
+        required: true
+        type: string
+        pattern: ^Basic [^ ]+$
       - name: ExchangeRateRequestBody
         in: body
         required: true
@@ -150,6 +172,8 @@ paths:
             $ref: '#/definitions/ConnectExchangeRateTimeoutResponseBody'
       schemes:
       - http
+      security:
+      - oauth2_header_Authorization: []
   /Enquiry/FullStatement/Account/1.0.0:
     post:
       tags:
@@ -160,6 +184,12 @@ paths:
       produces:
       - application/json
       parameters:
+      - name: Authorization
+        in: header
+        description: Auth token
+        required: true
+        type: string
+        pattern: ^Basic [^ ]+$
       - name: AccountFullStatementRequestBody
         in: body
         required: true
@@ -197,6 +227,8 @@ paths:
             $ref: '#/definitions/ConnectAccountFullStatementTimeoutResponseBody'
       schemes:
       - http
+      security:
+      - oauth2_header_Authorization: []
   /Enquiry/TransactionStatus/2.0.0:
     post:
       tags:
@@ -207,6 +239,12 @@ paths:
       produces:
       - application/json
       parameters:
+      - name: Authorization
+        in: header
+        description: Auth token
+        required: true
+        type: string
+        pattern: ^Basic [^ ]+$
       - name: TransactionStatusRequestBody
         in: body
         required: true
@@ -252,6 +290,8 @@ paths:
             $ref: '#/definitions/ConnectTransactionStatusTimeoutResponseBody'
       schemes:
       - http
+      security:
+      - oauth2_header_Authorization: []
   /Enquiry/Validation/Account/1.0.0:
     post:
       tags:
@@ -262,6 +302,12 @@ paths:
       produces:
       - application/json
       parameters:
+      - name: Authorization
+        in: header
+        description: Auth token
+        required: true
+        type: string
+        pattern: ^Basic [^ ]+$
       - name: AccountValidationRequestBody
         in: body
         required: true
@@ -297,6 +343,8 @@ paths:
             $ref: '#/definitions/ConnectAccountValidationTimeoutResponseBody'
       schemes:
       - http
+      security:
+      - oauth2_header_Authorization: []
   /FundsTransfer/External/A2A/PesaLink/1.0.0:
     post:
       tags:
@@ -307,6 +355,12 @@ paths:
       produces:
       - application/json
       parameters:
+      - name: Authorization
+        in: header
+        description: Auth token
+        required: true
+        type: string
+        pattern: ^Basic [^ ]+$
       - name: PesaLinkSendToAccountRequestBody
         in: body
         required: true
@@ -352,6 +406,8 @@ paths:
             $ref: '#/definitions/ConnectPesaLinkSendToAccountConflictResponseBody'
       schemes:
       - http
+      security:
+      - oauth2_header_Authorization: []
   /FundsTransfer/External/A2M/Mpesa/v1.0.0:
     post:
       tags:
@@ -362,6 +418,12 @@ paths:
       produces:
       - application/json
       parameters:
+      - name: Authorization
+        in: header
+        description: Auth token
+        required: true
+        type: string
+        pattern: ^Basic [^ ]+$
       - name: SendToMPesaRequestBody
         in: body
         required: true
@@ -407,6 +469,8 @@ paths:
             $ref: '#/definitions/ConnectSendToMPesaConflictResponseBody'
       schemes:
       - http
+      security:
+      - oauth2_header_Authorization: []
   /FundsTransfer/External/A2M/PesaLink/1.0.0:
     post:
       tags:
@@ -417,6 +481,12 @@ paths:
       produces:
       - application/json
       parameters:
+      - name: Authorization
+        in: header
+        description: Auth token
+        required: true
+        type: string
+        pattern: ^Basic [^ ]+$
       - name: PesaLinkSendToPhoneRequestBody
         in: body
         required: true
@@ -462,6 +532,8 @@ paths:
             $ref: '#/definitions/ConnectPesaLinkSendToPhoneConflictResponseBody'
       schemes:
       - http
+      security:
+      - oauth2_header_Authorization: []
   /FundsTransfer/Internal/A2A/2.0.0:
     post:
       tags:
@@ -472,6 +544,12 @@ paths:
       produces:
       - application/json
       parameters:
+      - name: Authorization
+        in: header
+        description: Auth token
+        required: true
+        type: string
+        pattern: ^Basic [^ ]+$
       - name: IFTAccountToAccountRequestBody
         in: body
         required: true
@@ -517,6 +595,8 @@ paths:
             $ref: '#/definitions/ConnectIFTAccountToAccountConflictResponseBody'
       schemes:
       - http
+      security:
+      - oauth2_header_Authorization: []
   /MiniStatement/Account/1.0.0:
     post:
       tags:
@@ -527,6 +607,12 @@ paths:
       produces:
       - application/json
       parameters:
+      - name: Authorization
+        in: header
+        description: Auth token
+        required: true
+        type: string
+        pattern: ^Basic [^ ]+$
       - name: AccountMiniStatementRequestBody
         in: body
         required: true
@@ -562,6 +648,8 @@ paths:
             $ref: '#/definitions/ConnectAccountMiniStatementTimeoutResponseBody'
       schemes:
       - http
+      security:
+      - oauth2_header_Authorization: []
   /Notifications/INS/Simulation/1.0.0:
     post:
       tags:
@@ -572,6 +660,12 @@ paths:
       produces:
       - application/json
       parameters:
+      - name: Authorization
+        in: header
+        description: Auth token
+        required: true
+        type: string
+        pattern: ^Basic [^ ]+$
       - name: INSSimulationRequestBody
         in: body
         required: true
@@ -615,6 +709,8 @@ paths:
             $ref: '#/definitions/ConnectINSSimulationTimeoutResponseBody'
       schemes:
       - http
+      security:
+      - oauth2_header_Authorization: []
   /health:
     get:
       tags:
@@ -660,30 +756,6 @@ paths:
       schemes:
       - http
       - https
-  /token:
-    post:
-      tags:
-      - connect
-      summary: token connect
-      description: Creates a valid JWT
-      operationId: connect#token
-      parameters:
-      - name: Authorization
-        in: header
-        description: Basic Auth security using Basic scheme (https://tools.ietf.org/html/rfc7617)
-        required: true
-        type: string
-      responses:
-        "200":
-          description: OK response.
-          schema:
-            $ref: '#/definitions/ConnectTokenResponseBody'
-            required:
-            - jwt
-      schemes:
-      - http
-      security:
-      - basic_header_Authorization: []
 definitions:
   AccountTransactionResponseBody:
     title: AccountTransactionResponseBody
@@ -4031,18 +4103,6 @@ definitions:
         code: "900902"
         description: Required OAuth credentials not provided.
         message: Missing Credentials
-  ConnectTokenResponseBody:
-    title: ConnectTokenResponseBody
-    type: object
-    properties:
-      jwt:
-        type: string
-        description: JWT token
-        example: a833ce4a-5903-3c5c-a9e9-7ae042e3080b
-    example:
-      jwt: a833ce4a-5903-3c5c-a9e9-7ae042e3080b
-    required:
-    - jwt
   ConnectTransactionStatusBadRequestResponseBody:
     title: 'Mediatype identifier: errorresponse; view=default'
     type: object
@@ -4882,13 +4942,9 @@ definitions:
     - TransactionCurrency
     - Narration
 securityDefinitions:
-  basic_header_Authorization:
-    type: basic
-    description: |-
-      Basic authentication used to authenticate security principal during token
-
-      **Security Scopes**:
-        * `api:read`: Read-only access
+  oauth2_header_Authorization:
+    type: oauth2
+    description: Secures endpoint by requiring a valid OAuth2 token.
 externalDocs:
   description: Library Usage
   url: https://github.com/wondenge/coop-go/blob/master/README.md
